moved title into main circle due to sizing issues on smaller screens

--- a/css/colour-circle-buttons.css
+++ b/css/colour-circle-buttons.css
@@ -8,6 +8,7 @@
   margin: auto;
   left:0;
   right:0;
+  cursor: pointer;
 }
 
 #white{
